ingress/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.kouidri.fr
        - cms.kouidri.fr
      secretName: subdomain-kouidri-tls
  rules:
    - host: www.kouidri.fr
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: "/api/"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
          - path: "/data/"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
    - host: cms.kouidri.fr
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: strapi
                port:
                  number: 1337
