ingress/portfolio-redirection-ingress.yaml
# This ingress aim to redirect kouidri.fr into www.kouidri.fr

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-redirection-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/permanent-redirect: "https://www.kouidri.fr"
    #nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kouidri.fr
      secretName: kouidri-fr-tls
  rules:
    - host: kouidri.fr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: redirection-service
                port:
                  number: 80
